<resources>
    <string name="app_name">360safe</string>
    <string name="_1080">1080手机卫士</string>
    <string name="header_welcomes">千里之堤毁于蚁穴，不怕一万就怕万一,不先为备，何以待敌</string>
    <string name="setting">设置中心</string>
    <string name="checkUpdate">检查版本更新</string>
    <string name="no_spam">骚扰拦截</string>
    <string name="locale_show_setting">归属地显示设置</string>
    <string name="locale_style_setting">归属地样式设置</string>
    <string name="initPwd">初始化密码设置</string>
    <string name="inputPwd">请输入密码</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="yes">确认</string>
    <string name="no">取消</string>
    <string name="confirm">验证密码</string>
    <string name="sample_device_admin">大河向东流</string>
    <string name="sample_device_admin_description">一寸光阴一寸金</string>
</resources>
