<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        style="@style/TvTitleStyle"
        android:text="@string/setting" />

    <com.example.crxc.a360safe.view.SettingItemView
        android:id="@+id/setting_item_check_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:clickable="true"
        app:backImage="first"
        app:visibility="visible"
        app:text="@string/checkUpdate" />

    <com.example.crxc.a360safe.view.SettingItemView
        android:id="@+id/setting_item_no_spam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:backImage="last"
        app:visibility="visible"
        app:text="@string/no_spam" />

    <com.example.crxc.a360safe.view.SettingItemView
        android:id="@+id/setting_item_locale_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:clickable="true"
        app:backImage="first"
        app:visibility="invisible"
        app:text="@string/locale_show_setting" />

    <com.example.crxc.a360safe.view.SettingItemView
        android:id="@+id/setting_item_locale_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:backImage="last"
        app:visibility="invisible"
        app:text="@string/locale_style_setting" />

</LinearLayout>